--- a/settings.cfg
+++ b/settings.cfg
@@ -17,3 +17,8 @@ stale_body=knowndomains.csv was not updated, so the report was not run.
 api_username=
 api_key=
 parsed_whois=false
+
+[slack]
+slack_url=
+slack_channel=
+slack_authorization_bearer=
