--- a/settings.cfg
+++ b/settings.cfg
@@ -10,7 +10,7 @@ password=
 from=
 to=user1@example.com, example2@example.com
 subject=DomainAware daily DNS recon report
-new_results_body=The results from today's DNS typosquatting scan are attached.
+new_results_body=The results from todays DNS typosquatting scan are attached.
 stale_body=knowndomains.csv was not updated, so the report was not run.
 
 [domaintools]
