--- a/settings.cfg
+++ b/settings.cfg
@@ -1,6 +1,7 @@
 [paths]
 dnstwist=/opt/dnstwist/dnstwist.py
-urlcrazy=/opt/urlcrazy/urlcrazy
+urlcrazy=/opt/urlcrazy/urlcrazy.py
+pwd = /opt/domainaware
 
 [email]
 host=smtp.elasticemail.com
@@ -16,9 +17,9 @@ stale_body=knowndomains.csv was not updated, so the report was not run.
 [domaintools]
 api_username=
 api_key=
-parsed_whois=false
+parsed_whois=true
 
 [slack]
-slack_url=
-slack_channel=
-slack_authorization_bearer=
+slack_url=https://hooks.slack.com/services/xxx/xxxx/xxx
+channel=
+authorization_bearer=xoxb-xxx-xxx-xxx-xxx
